# hexler

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
src/: ascii_renderer.rs  border_writer.rs  byte_to_color.rs  error.rs  hex_formatter.rs  lib.rs  line_writer.rs  main.rs  test.cpp
tests/: integration_test.rs
tests/data/: 256.hastyhex.txt  256.hexxy.txt  256.hexyl.txt  256.tscd.txt  256.xd.txt  256.xxd.txt  test.py
