[package]
name = "hexler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.4.18", features = ["derive"] }
size = "0.4.1"
term_size = "0.3.2"
time = "0.3.34"

[profile.release]
# debug = 1
