[package]
name = "hexler"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A colorful hex printer with opinionated defaults"
repository = "https://github.com/martinus/hexler"
readme = "README.md"

[lib]
name = "hexler"
path = "src/lib.rs"

[[bin]]
name = "hexler"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.4.18", features = ["derive"] }
pager = "0.16.1"
size = "0.4.1"
term_size = "0.3.2"
thiserror = "1.0"
time = "0.3.34"

[profile.release]
# debug = 1

[profile.dev]
debug = true
