[package]
name = "hexler"
version = "1.0.0"
edition = "2021"
authors = ["Martin Leitner-Ankerl <martin.ankerl@gmail.com>"]
license = "MIT"
description = "A colorful hex printer with opinionated defaults"
repository = "https://github.com/martinus/hexler"
homepage = "https://github.com/martinus/hexler"
readme = "README.md"
keywords = ["hex", "dump", "viewer", "hexdump", "binary"]
categories = ["command-line-utilities", "development-tools::debugging"]
rust-version = "1.70"

[lib]
name = "hexler"
path = "src/lib.rs"

[[bin]]
name = "hexler"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.4.18", features = ["derive"] }
pager = "0.16.1"
rayon = "1.10"
size = "0.5.0"
terminal_size = "0.4.3"
thiserror = "2.0"
time = "0.3.34"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = true
